# pandora

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mint.json
.github/: FUNDING.yml
.github/workflows/: release-cli.yml  rust.yml
docs/: admin-tui.md  api-reference.md  architecture.md  configuration.md  docs.json  getting-started.md  m2m.md  mfa.md  security.md
ovlt-cli/: Cargo.toml
ovlt-cli/src/: api.rs  config_file.rs  events.rs  main.rs  tui.rs
ovlt-cli/src/components/: modal.rs  statusbar.rs  table.rs
ovlt-cli/src/ui/: clients.rs  layout.rs  login.rs  permissions.rs  quickstart.rs  roles.rs  sessions.rs  users.rs
ovlt-core/: .env.example  Cargo.toml
ovlt-core/migration/: Cargo.toml
ovlt-core/migration/src/: lib.rs  m20240101_000001_create_tenants.rs  m20240101_000002_create_users.rs  m20240101_000003_create_refresh_tokens.rs  m20240101_000004_create_oauth_accounts.rs  m20240101_000005_security_hardening.rs  m20240101_000008_sessions.rs  m20240101_000009_fix_rls_force.rs  m20240101_000010_revoked_jtis.rs  m20240101_000011_sessions_last_seen.rs  m20240101_000012_roles.rs  m20240101_000013_permissions.rs  m20240101_000014_sessions_rls.rs  m20240101_000015_rls_app_role.rs  m20240101_000016_user_lifecycle.rs  m20240101_000017_tenant_settings.rs  m20240101_000020_identity_providers.rs  m20240101_000021_totp_secrets.rs  m20240101_000022_rename_role.rs
ovlt-core/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
ovlt-core/src/entity/: client_roles.rs  identity_providers.rs  mod.rs  oauth_accounts.rs  oauth_clients.rs  one_time_tokens.rs  permissions.rs  prelude.rs  refresh_tokens.rs  revoked_jtis.rs  role_permissions.rs  roles.rs  sessions.rs  totp_secrets.rs  user_roles.rs  users.rs
ovlt-core/src/handlers/: admin_auth.rs  admin_identity_providers.rs  admin_permissions.rs  admin_roles.rs  admin_sessions.rs  admin_tenant_settings.rs  admin_users.rs  audit_log.rs  clients.rs  login.rs  logout.rs  mfa.rs  oauth_as.rs  oauth_revoke.rs  refresh.rs  register.rs  reset_password.rs  revoke.rs  tenants.rs  verify_email.rs  well_known.rs
ovlt-core/src/middleware/: auth.rs  tenant.rs
ovlt-core/src/routes/: admin_identity_providers.rs  admin_permissions.rs  admin_roles.rs  admin_sessions.rs  admin_users.rs  auth.rs  clients.rs  oauth_as.rs  settings.rs  tenants.rs
ovlt-core/src/services/: audit_service.rs  bootstrap_service.rs  identity_provider_service.rs  lockout_service.rs  mfa_service.rs  mod.rs  oauth_service.rs  one_time_token_service.rs  password_policy_service.rs  permission_service.rs  role_service.rs  seed_service.rs  session_service.rs  tenant_service.rs  tenant_settings_service.rs  token_service.rs  user_service.rs
ovlt-core/tests/: auth_test.rs
ovtl-cli/: Cargo.toml
ovtl-cli/src/: api.rs  app.rs  config_file.rs  events.rs  main.rs  tui.rs
ovtl-cli/src/ui/: audit_log.rs  (+13 more)
ovtl-core/: .env.example  Cargo.toml
ovtl-core/migration/src/: lib.rs  m20240101_000006_oauth_clients.rs  m20240101_000007_authorization_codes.rs  m20240101_000008_sessions.rs  m20240101_000016_user_lifecycle.rs  m20240101_000018_client_roles.rs  m20240101_000019_client_token_ttl.rs  m20240101_000021_totp_secrets.rs
ovtl-core/src/: config.rs  db.rs  error.rs  main.rs  state.rs
ovtl-core/src/entity/: audit_log.rs  authorization_codes.rs  login_attempts.rs  mod.rs  oauth_clients.rs  password_policies.rs  prelude.rs  sessions.rs  tenant_settings.rs  tenants.rs
ovtl-core/src/handlers/: admin_identity_providers.rs  admin_permissions.rs  admin_roles.rs  admin_sessions.rs  admin_tenant_settings.rs  admin_users.rs  audit_log.rs  clients.rs  forgot_password.rs  login.rs  logout.rs  me.rs  mod.rs  oauth.rs  oauth_as.rs  oauth_revoke.rs  refresh.rs  register.rs  reset_password.rs  tenants.rs  verify_email.rs  well_known.rs
ovtl-core/src/middleware/: auth.rs  security.rs  tenant.rs
ovtl-core/src/routes/: admin_permissions.rs  admin_roles.rs  admin_users.rs  audit_log.rs  auth.rs  clients.rs  mod.rs  oauth_as.rs  settings.rs  tenants.rs  user.rs
ovtl-core/src/services/: bootstrap_service.rs  client_service.rs  jwk_service.rs  lockout_service.rs  mod.rs  oauth_service.rs  one_time_token_service.rs  password_policy_service.rs  permission_service.rs  role_service.rs  seed_service.rs  session_service.rs  tenant_service.rs  tenant_settings_service.rs  token_service.rs  user_service.rs
ovtl-core/tests/: auth_test.rs
pandora-server/: .env  Cargo.toml
pandora-server/migration/src/: lib.rs
pandora-server/src/: config.rs  db.rs  error.rs  main.rs  state.rs
pandora-server/src/entity/: mod.rs  prelude.rs  users.rs
pandora-server/src/routes/: auth.rs
pandora-server/src/services/: mod.rs  oauth_service.rs
pandora-server/tests/: auth_test.rs
scripts/: test-oidc.sh
(+4 files in other folders)
