[package]
name    = "ovtl-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "ovtl_core"
path = "src/lib.rs"

[[bin]]
name = "ovtl-core"
path = "src/main.rs"

[dependencies]
# Migrations (run via --migrate flag at startup)
migration = { path = "migration" }

# Web
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
tower-http         = { version = "0.5", features = ["cors", "trace", "set-header"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# ORM + DB
sea-orm = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }

# Auth
jsonwebtoken = "9"
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }

# Crypto
hefesto = "1.1.0"

# Hashing de refresh tokens
sha2 = "0.10"
hex  = "0.4"

# Core
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dotenvy     = "0.15"
thiserror   = "1"
validator   = { version = "0.18", features = ["derive"] }

# RSA — keypair para id_token RS256
rsa  = { version = "0.9", features = ["pem"] }
rand = "0.8"

# OAuth2
oauth2  = "4"
reqwest = { version = "0.12", features = ["json"] }
hmac    = "0.12"
base64  = "0.22"


[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
